--- a/src/server/content/homepage.html
+++ b/src/server/content/homepage.html
@@ -1,11 +1,53 @@
-<html lang="">
-<!-- smoke test marker: WeeWikiPaint home page -->
-<head>
-    <title>WeeWikiPaint</title>
-</head>
+<html lang="en">
+    <!-- smoke test marker: WeeWikiPaint home page -->
+    <head>
+        <title>Wee(Wiki)Paint</title>
 
-<body>
-    <p>Welcome to WeeWikiPaint!</p>
-</body>
+        <meta charset="utf-8"/>
 
+        <style type="text/css">
+            body {
+                background-color: whitesmoke;
+                margin: 0;
+                padding: 0;
+                font-family: sans-serif;
+            }
+
+            div {
+                width: 800px;
+                margin: 2em auto;
+                padding: 1em;
+                background-color: powderblue;
+                -webkit-border-radius: 1em;
+                -moz-border-radius: 1em;
+                border-radius: 1em;
+                text-align: center;
+            }
+
+            a:link, a:visited {
+                text-decoration: none;
+            }
+
+        </style>
+    </head>
+
+    <body>
+    <section>
+        <div>
+            <h2>Welcome to Wee(Wiki)Paint!</h2>
+        </div>
+        <div style="text-align: left;">
+            <p>
+                Wee(Wiki)Paint is a collaborative painting website with cross-platform browser support (except IE).
+            </p>
+
+            <br>
+
+            <p>
+                The site is developed on <a href="http://github.com/mxwg/lets_code_js">github.com/mxwg/lets_code_js</a>
+                and deployed via travis-ci to <a href="http://weepaint.herokuapp.com">heroku</a>.
+            </p>
+        </div>
+    </section>
+    </body>
 </html>
