--- a/src/server/content/homepage.html
+++ b/src/server/content/homepage.html
@@ -58,7 +58,7 @@
             <h1>Draw here:</h1>
         </div>
 
-        <div id="wwp-drawing-area" style='height: 300px; width: 500px; border: solid red 2px;'>
+        <div id="wwp-drawing-area" style='height: 300px; border: solid red 2px; padding: 0px;'>
 
         </div>
     </section>
